// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flat Button renders default button 1`] = `
<button
  className="flat"
/>
`;

exports[`Flat Button renders disabled button 1`] = `
<button
  className="flat__disabled"
  disabled={true}
/>
`;

exports[`Raised Button renders default button 1`] = `
<button
  className="raised__active"
/>
`;

exports[`Raised Button renders disabled button 1`] = `
<button
  className="raised__disabled"
  disabled={true}
/>
`;
